fix-text-overflow

--- a/asset/style.scss
+++ b/asset/style.scss
@@ -154,8 +154,6 @@ header {
     }   
 }
 
-
-
 .instruction__item {
     display: flex;
     margin-top: 26px;
@@ -435,7 +433,7 @@ footer {
         background: #FFFFFF;
         margin: 15px 0 0 0;
         margin-block-end: 0;
-        padding: 16px 12px 16px 12px;
+        padding: 16px 4% 16px 4%;
         list-style-type: none; 
         border-radius: 20px;
         box-shadow: 0px 3px 13px -3px rgba(0,0,0,0.50);
@@ -457,6 +455,10 @@ footer {
 
         &:hover .fa-check-circle {
             transform: rotate(0deg);
+        }
+
+        &:hover p {
+            width: 60%;
         }
 
         @keyframes fadeIn {
@@ -501,6 +503,7 @@ footer {
             white-space: nowrap;
             overflow: hidden;
             width: 80%;
+            transition: width 330ms ease-in-out;
 
             .menu-section-ul__price {
                 font-weight: 700;
@@ -555,7 +558,6 @@ footer {
         width: 60px;
         height: 75px;
         padding-left: 10px;
-        background-color: rgb(255, 255, 255);
         float: right;
         top: 0px;
         right: 0px;
